# Beacon

./: .Dockerfile  .actrc  .env  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  prod.env  release-docker-compose.yml
.github/workflows/: alpha.yml  release.yml
backend/: .env  Cargo.toml  docker-compose.yml
backend/migrations/: 0.001_init.sql
backend/src/: main.rs  state.rs
backend/src/dbmodels/: server.rs  user.rs
backend/src/keycloak/: Keycloak.rs  mod.rs
backend/src/routes/: mod.rs
backend/src/routes/auth/: handlers.rs  mod.rs
backend/src/routes/server/: handlers.rs  mod.rs
beacon-client/: Cargo.toml
beacon-client/src/: main.rs
beacon-frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
beacon-frontend/src/: App.vue
beacon-frontend/src/Pages/auth/: index.js  routes.js
beacon-frontend/src/Pages/auth/pages/: login.vue
beacon-frontend/src/Pages/dashboard/: index.js  routes.js
beacon-frontend/src/Pages/dashboard/pages/: dashboard.vue
beacon-frontend/src/UI/: CreateServerCard.vue  PlayerStats.vue  ServerCard.vue  ServerStats.vue  sidebar.vue
beacon-frontend/src/router/: index.js
beacon-frontend/src/stores/: AuthStore.js  UserDataStore.js
beacon-frontend/src/views/: MainView.vue
beacon-host/: Cargo.toml
beacon-host/src/: main.rs
data/keycloak/h2/: keycloakdb.trace.db
data/postgres/base/1/: pg_internal.init
data/postgres/base/5/: pg_internal.init
data/postgres/global/: 1260  1262  2671  pg_control  pg_internal.init
data/postgres/pg_stat/: pgstat.stat
database/: setup-db.bat  setup-db.sh  setup_env.bat  setup_env.sh
nginx/: default.conf  prod.conf
