[package]
name = "beacon-client"
version = "0.1.0"
edition = "2021"

[package.metadata.bundle]
name = "BeaconHub"
identifier = "com.2remus.beacon"
icon = ["icons/32x32.png", "icons/128x128.png"] # Optional
version = "1.0.0"
copyright = "Copyright © 2026 2remus. All rights reserved."
category = "DeveloperTool"
short_description = "P2P Client for Beacon."
osx_bundle_gui_identifier = "com.apple.Terminal"


[dependencies]
tokio = { version = "1", features = ["full"] }
ctrlc = "3.4"
libc = "0.2"
reqwest = { version = "0.11", features = ["blocking"] }