[package]
name = "beacon-host"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
ctrlc = "3.4"
libc = "0.2"
reqwest = { version = "0.11", features = ["blocking"] }



[package.metadata.bundle]
name = "BeaconHub"
identifier = "com.2remus.beacon"
icon = ["icons/32x32.png", "icons/128x128.png"] # Optional
version = "1.0.3"
copyright = "Copyright © 2026 2remus. All rights reserved."
category = "DeveloperTool"
short_description = "P2P Host for Beacon."
osx_bundle_gui_identifier = "com.apple.Terminal"
# This prevents it from being hidden in the background
osx_manual_gui_setup = true


[package.metadata.packager]
name = "BeaconHub"
identifier = "com.2remus.beacon"
# This is the key: it tells the packager to treat it as a terminal tool
binaries = [
    { path = "beacon-hub", main = true }
]
# For macOS, you can specify that it requires a terminal
[package.metadata.packager.macos]
subsystem = "Console"